<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item2"
        android:icon="@drawable/player"
        android:showAsAction="never"
        android:title="@string/player">
        <menu>
            <item
                android:id="@+id/opt_mplayer"
                android:title="MPlayer"/>
            <item
                android:id="@+id/opt_totem"
                android:title="Totem"/>
        </menu>
    </item>
    <item
        android:id="@+id/item5"
        android:icon="@drawable/pls_smal"
        android:showAsAction="ifRoom"
        android:title="Playlists">
        <menu>
            <item
                android:id="@+id/opt_playlist"
                android:title="@string/playlist_show"/>
            <item
                android:id="@+id/opt_create_playlist"
                android:title="@string/playlist_add"/>
        </menu>
    </item>
    <item
        android:id="@+id/opt_dvd"
        android:icon="@drawable/dvd"
        android:showAsAction="never"
        android:title="DVD">
        <menu>
            <item
                android:id="@+id/opt_dvd_eject"
                android:title="@string/dvd_eject"/>
            <item
                android:id="@+id/opt_dvd_menu"
                android:title="@string/dvd_menu"/>
            <item
                android:id="@+id/opt_dvd_no_subtitle"
                android:title="@string/dvd_no_sub"/>
            <item
                android:id="@+id/opt_dvd_next_subtitle"
                android:title="@string/dvd_next_sub"/>
        </menu>
    </item>
    <item
        android:id="@+id/opt_refresh"
        android:icon="@drawable/refresh_32"
        android:showAsAction="ifRoom"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/opt_control"
        android:icon="@drawable/control"
        android:showAsAction="ifRoom"
        android:title="@string/control">
        <menu>
            <item
                android:id="@+id/opt_upload"
                android:icon="@drawable/upload"
                android:title="@string/str_upload">
            </item>
            <item
                android:id="@+id/opt_light_on"
                android:icon="@drawable/light_on"
                android:title="@string/make_bright"/>
            <item
                android:id="@+id/opt_light_off"
                android:icon="@drawable/light_off"
                android:title="@string/make_dark"/>
            <item
                android:id="@+id/opt_audiotrack"
                android:icon="@drawable/audio"
                android:title="@string/audio_track"/>
            <item
                android:id="@+id/opt_right"
                android:icon="@drawable/player_right"
                android:title="@string/move_right"/>
            <item
                android:id="@+id/opt_left"
                android:icon="@drawable/player_left"
                android:title="@string/move_left"/>
            <item
                android:id="@+id/opt_shutdown"
                android:icon="@drawable/exit"
                android:title="@string/shutdown"/>
        </menu>
    </item>

</menu>