<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/opt_server_select"
        android:icon="@drawable/server"
        android:showAsAction="ifRoom"
        android:title="@string/server_name">
    </item>
    <item
        android:id="@+id/opt_control_refresh"
        android:icon="@drawable/refresh_32"
        android:showAsAction="ifRoom"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/opt_exit"
        android:icon="@drawable/exit"
        android:showAsAction="never"
        android:title="@string/exit">
    </item>
    <item
        android:id="@+id/opt_settings"
        android:icon="@drawable/control"
        android:showAsAction="never"
        android:title="@string/settings">
    </item>

</menu>